objects/State__c.object
<CustomObject>
    <description>ISO States</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Territory</fullName>
                </value>
                <value>
                    <fullName>Union Territory</fullName>
                </value>
                <value>
                    <fullName>Special Administrative Region</fullName>
                </value>
                <value>
                    <fullName>Regions</fullName>
                </value>
                <value>
                    <fullName>Province</fullName>
                </value>
                <value>
                    <fullName>Outlying Territory</fullName>
                </value>
                <value>
                    <fullName>Municipality</fullName>
                </value>
                <value>
                    <fullName>Federal District</fullName>
                </value>
                <value>
                    <fullName>District</fullName>
                </value>
                <value>
                    <fullName>Autonomous Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_ISO_Code__c</fullName>
        <formula>Country__r.Country_Code_2__c</formula>
        <label>Country ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Country__r.Country__c</formula>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_ISO_Code__c</fullName>
        <externalId>true</externalId>
        <label>State ISO Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State_Code__c</columns>
        <columns>Country__c</columns>
        <columns>Country_ISO_Code__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>